<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/brown_medium1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:contentDescription="@string/app_name"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_gravity="center"
        android:src="@drawable/fooddiarylogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/app_title"
        android:contentDescription="@string/app_name"
        android:layout_width="250sp"
        android:layout_height="45sp"
        android:layout_gravity="center"
        android:src="@drawable/fooddiarytitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/app_slogan"
        android:textColor="@color/yellow_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:autofillHints="emailAddress"
        android:textColorHint="@color/white"
        android:padding="20sp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_slogan" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:padding="20sp"
        android:background="#30ffffff"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:autofillHints="password"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_email" />

    <TextView
        android:id="@+id/textview_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5sp"
        android:fontFamily="monospace"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:fontFamily="monospace"
        android:padding="10sp"
        android:text="@string/button_login"
        android:textColor="@color/yellow_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_forgotpassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:fontFamily="monospace"
        android:padding="10sp"
        android:text="@string/button_sign_up"
        android:textColor="@color/yellow_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>